Fix gridfield style issues with negative margins (#474)
* BUG Overlapping gridfields if stacked

* Fix gridfield sides being cut off in padded panels ie. campaign admin

--- a/client/src/styles/legacy/GridField.scss
+++ b/client/src/styles/legacy/GridField.scss
@@ -367,9 +367,8 @@
 }
 
 .grid-field {
-
   // If gridfield isn't first thing on page
-  .form-group + & {
+  .field + & {
     .toolbar--content {
       margin-top: 0;
     }
